# istio-wasm-template

./: .gitignore  Cargo.toml  Makefile  README.md
deploy/: registry.sh
deploy/charts/istio-wasm/: Chart.yaml  values.yaml
deploy/charts/istio-wasm/templates/: _helpers.tpl  secrets.yaml  wasm.yaml
src/: lib.rs
