[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
description = "{{project-name}}, a rusty-hermit application"
repository = "https://github.com/{{username}}/{{project-name}}"
license = "MIT/Apache-2.0"

[dependencies]
proxy-wasm = "0.2.1"
log = "0.4"
base64 = "0.13.0"

[lib]
crate-type = ["cdylib"]
